--- a/Prototype.html
+++ b/Prototype.html
@@ -35,7 +35,10 @@
     <div class="container">
         <div id="dld"><iframe style="border: 0" width="550" height="1000" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FsEdiQ38P5cwi86CEDztuv8%2FDigital-Lending%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D25-16146%26viewport%3D3307%252C325%252C0.89%26t%3DSoQLBqJwgadYPPIW-1%26scaling%3Dscale-down%26starting-point-node-id%3D25%253A15860%26mode%3Ddesign" allowfullscreen></iframe></div>
         <div id="autoClub"><iframe style="border: 0;" width="550" height="1000" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F5Kmkqx8KdpwTxCBXwsvwPW%2FAUTO-CLUB%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D4-7898%26viewport%3D1711%252C1475%252C0.45%26t%3D1bPno6K4EOKN8gQC-1%26scaling%3Dscale-down%26starting-point-node-id%3D39%253A2363%26mode%3Ddesign" allowfullscreen></iframe></div>
-        <div id="home"><a href="javascript:zidx('dld')">DLD</a><br><a href="javascript:zidx('autoClub')">Auto Club</a></div>
+        <!-- <div id="home"><a href="javascript:zidx('dld')">DLD</a><br><a href="javascript:zidx('autoClub')">Auto Club</a></div> -->
+        <div id="home">
+            <img src="home.png" alt="" style="float: left;">
+        </div>
     </div>
     <script>
         function zidx(val) {
